--- a/app_config.json
+++ b/app_config.json
@@ -1,10 +1,10 @@
 {
-   "home_api_cache_duration": "100000",
-    "eshop_home_cache_duration": "1000000",
-    "onboarding_cache_duration":"1000000",
-    "events_home_cache_duration": "1000000",
-    "video_gallery_cache_duration":"1000000",
-    "image_gallery_cache_duration":"100000",
-    "blogs_cache_duration":"100000"
+   "main_home_page_cache_duration": "100000",
+    "eshop_home_page_cache_duration": "1000000",
+    "onboarding_page_cache_duration":"1000000",
+    "events_home_page_cache_duration": "1000000",
+    "video_gallery_page_cache_duration":"1000000",
+    "image_gallery_page_cache_duration":"100000",
+    "blogs_page_cache_duration":"100000"
     
 }
